Made server app reactive by using Mutiny. But still there is a question with the local cache as it implemented via ConcurrentHashMap which is synchronized. Any way made FactCacheService interface methods to return Uni, so in the future it will be easier to write implementation with real database or async local cache.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -82,6 +82,11 @@
             <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>mutiny</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
